######################################################################

(first two numbers of package versions do not necessarily reflect 
 package-individual development, but rather are chosen for the 
 distrXXX family as a whole in order to ease updating "depends" 
 information)

##############
v 2.8
##############

user-visible CHANGES:
+ DESCRIPTION tag SVNRevision changed to VCS/SVNRevision

##############
v 2.7
##############

user-visible CHANGES:

defunct:  
+ plot.rd, r.rd, d.rd, p.rd, and q.rd are replaced by 
  plotRd, rRd, dRd, pRd, and qRd (to avoid clashes with S3 inheritance)  

under the hood:
+ wherever possible also use q.l internally instead of q to 
  provide functionality in IRKernel

##############
v 2.6
##############

user-visible CHANGES:
+ title changed to title style / capitalization
+ new synonyma plotRd, rRd, dRd, pRd, and qRd for  plot.rd, r.rd, d.rd, p.rd, and q.rd
  to substitute the old ones on the long run (to avoid clashes with S3 inheritance)  

deprecated:  
+ plot.rd, r.rd, d.rd, p.rd, and q.rd will soon be replaced by the upper aliases
under the hood:

+ removed ::: internal dependencies (within distr-Fam of pkgs) by copying 
  respective routines
+ fixed E and var methods for MultivarMixingDistribution
+ enhanced imports in DESCRIPTION by explicating second order imports

##############
v 2.5
##############

user-visible CHANGES:

GENERAL ENHANCEMENTS:
+ cleaned DESCRIPTION and NAMESPACE file as to Imports/Depends

under the hood:

+ added .Rbuildignore
+ used some recently exported routines which had been internal so far to
  avoid calls by :::
 
BUGFIXES
+ fixed some links in html-man pages


##############
v 2.4
##############

under the hood
+ removed lazyload tag in DESCRIPTION
+ added DESCRIPTION tag "ByteCompile" to all our packages
+ updating maintainer email address and URL.
+ added argument no.readonly = TRUE to assignments of form opar <- par()
+ deleted no longer needed chm folders



##############
v 2.3