@@ -14,6 +14,9 @@ v 2.8
 user-visible CHANGES:
 + DESCRIPTION tag SVNRevision changed to VCS/SVNRevision
 
+under the hood:
++ now specified that we want to use distr::solve
+
 ##############
 v 2.7
 ##############
